--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="app.js"></script>
+    <!-- Load app.js as a module to use `await` -->
+    <script type="module" src="app.js"></script>
   </body>
 </html>
